--- a/_posts/2016-09-07-welcome.md
+++ b/_posts/2016-09-07-welcome.md
@@ -2,19 +2,28 @@
 layout: post
 title: Home
 ---
-<p><h1>Welcome</h1></p>
-
-<p style="text-align: justify">
-At the beginning of 2017, the Île-de-France Region gave its support to the <i>Major Interest Field Of Research</i> (French <i>Domaine d’Intérêt Majeur</i> known as <i>DIM</i>) : <i>Science of the text and new knowledge</i>. The aim of this network is to bring together, at the regional level, institutional initiatives whose goal is to stimulate a Research for excellence in Digital Humanities, able to compete with its national and international counterparts. </p>
-<p style="text-align: justify">
-The DIM <i>Science of the text and new knowledge</i> is specifically intended to support, first of all, research projects where digitized or originally belonging to numeric Culture document, archive and resources, contribute to redrawing the contours of Cultural Heritage.Research projects supported are also those that structure the digital document for exploration, mining and reconfiguration for public viewing purposes. For innovative tools allowing an expanded use of data are mattering, it is a question of renewing the science of texts in the broad sense.</p>
-<p style="text-align: justify">Finally, the SDTCN DIM proposes to assist all research in order to take the measure of the digital revolution and the socio-cultural and cognitive changes it implies, contributing, from a multidisciplinary perspective, to the definition of an epistemology of knowledge and the ethics of their uses.Partners wishing to join the network will find an offer of services including:
-
-<ul>
-<li>The portal humanitiesnumeriques.fr, including itself several services</li>
-<li>Various Digital Humanities Contacts in Île-de-France</li>
-<li>An international watch of digital humanities</li>
-<li>Resources and tools</li>
-<li>Calls for proposals and funding opportunities</li>
+<h1>Home:IsilexLite</h1>
+<p>IsilexLite v1.2<strong>.</strong>2 (Basex 8.6.4 compliant) is a Web Server, a CMS (Content Management System) and an XML Database Driver System linked to&nbsp;<a href="http://www.basex.org" shape="rect">BaseX</a>&nbsp;available under License <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html" shape="rect">OpenGPL v.3</a>.&nbsp;It's also a Private Social Network Organizer producing high-quality XML data file.&nbsp;This WebSite (Isilex.fr) is an Instance of Isilex, so you can see what you could do.</p>
+<p>Unlike&nbsp;a product like&nbsp;<a href="http://www.wordpress.com" shape="rect">WordPress</a>, IsilexLite can host your Web site directly onto your own machine in your Business place or your laboratory, or even at home, and lets you directly make your Work reachable thru the web. It allows you to link Multimedia content to your XML files. The Web Server for IsilexLite is a Java HTTP server and container. It is a web server based around the user conception called REST, invented by Roy Field in the 1990sw, and which allows one to associate a programming algorithm to a URL.</p>
+<p>When you access IsilexLite, it is &lsquo;system ready&rsquo; on whatever platform you are using.</p>
+<p>You simply have to start it up. You will see a small ruler icon appear in the system tray adjacent to the time icon. Click on &lsquo;open Isilex&rsquo; and it is then up and running. You can begin to work with it straight away, i.e. you can start creating files, annotations, and a corpus.</p>
+<p>Since it is programmed in Java, BaseX and its wrapper Web IsilexLite, work on any platform and do not need to be installed.</p>
+<h1 style="text-align: left;">With Your IsilexLite, you can</h1>
+<ul class="tabUserAdmin">
+<li>Build an encyclopedia project, or a corpus database, alone or with my collaborators and publish it online</li>
+<li>Create Redactors groups for every task of my project.</li>
+<li>Create and manage multiple databases; allow one Web Database to be displayed while another is used by contributors.</li>
+<li>Export to .odt (Office) or PDF your datas: one file at a time, or a group.</li>
+<li>Mark all occurrences of a stemmed word in a paragraph (XQuery Full Text)</li>
+<li>Modify all my Web Pages in one click in a simple HTML Editor</li>
+<li>Modify XML Datas, modify XML Datas, correct or even delete XML</li>
+<li>Ask to the project moderator to validate a work</li>
+<li>Modify configuration of a site (CSS, XSD)</li>
+<li>easily configure an XHTML/HTML bilingual site...&nbsp;</li>
+<li><a href="http://www.isilex.fr/exemples" shape="rect">Learn more</a></li>
 </ul>
-</p>
+<p>&nbsp;[<strong>Breaking news:</strong> Isilex is proud to announce,&nbsp;Cozette Griffin-Kremer (CRBC, Brest),&nbsp;Guoqiang Li (Universit&eacute; Paris Ouest),&nbsp;Perrine Mane (CNRS),&nbsp;Charlotte von Verschuer (EPHE)&nbsp;publish Dictionary of Traditional Agriculture, English-French-Chinese-Japanese Dicat &nbsp;in collaboration with Isilex (Philippe Pons)]</p>
+<ul class="tabUserAdmin">
+<li>&nbsp;</li>
+</ul>
+</div>
